2009-04-24 John Wu <John.Wu at ACM.org>
	* src/tafel.cpp:1624 delete the line that changes ierr to 0 and -1
	* src/tafel.cpp:1055 in function write, add code to check for
	index specification in gParameters
	* tests/Makefile.am: make test failure message more consistent,
	they now all starts with 'Did NOT pass' such-and-such test
	* examples/tcapi.c: add explicit casting to match the types
	specified in the print format (otherwise prints wront value for
	64-bit integers on Mac under gcc 4.0.0)

2009-04-23 John Wu <John.Wu at ACM.org>
	* src/parti.cpp: prevent current versions of part::reorder from
	working on partitions with string values, they simply will not
	work.  Add code to deal with external RIDs if they are present.
	* INSTALL: add note (13) regarding the user of prefix and Java
	native interface
	* src/bundle.h, src/bundle.cpp: clean up in-line documentation,
	add getLong and getULong to ibis::query::result
	* src/whereClause.h, src/selectClause.h: clean up in-line
	documentation -- whereClause was not showing up in the doxygen
	documents
	* src/part.h, src/part.cpp: add selectBytes, selectUBytes,
	selectShort, selectUShort, and selectULong
	* src/query.h, src/query.cpp: add getQualifiedBytes,
	getQualifiedUBytes, getQualifiedShorts, getQualifiedUShorts,
	getQualifiedLongs, and getQualifiedULongs
	* src/table.h, src/tafel.cpp: change tablex::appendRow to return
	the number of values added, change tablex::appendRows to return
	the number of rows added

2009-04-22 John Wu <John.Wu at ACM.org>
	* src/query.h, src/query.cpp: add function getQualifiedStrings
	* src/part.h, src/part.cpp: add function selectStrings
	* src/utilidor.h: clean up errors in in-line documentation

2009-04-18 John Wu <John.Wu at ACM.org>
	* configure.ac: actually try to compile src/whereLexer.cc to
	determine whether to use win/FlexLexer.h or not

2009-04-17 John Wu <John.Wu at ACM.org>
	* src/table.h, src/tab.h, src/bord.h, src/join.h, src/joinin.h: